--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,11 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  --clr-1: #F3D170;
+  /* --clr-1: #F3D170;
   --clr-2: #A1C2E1;
   --clr-3: #EDB5A8;
   --clr-4: #00ACBA;
-  --clr-5: #F6D48A;
+  --clr-5: #F6D48A; */
 }
 
 .first-section h1 {
@@ -70,4 +70,44 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: row;
+  column-gap: 3rem;
+}
+
+.index-img {
+  width: 20vw;
+  border-radius: 50%;
+}
+
+.welcome-message {
+  padding: 1rem;
+  border: 0.25rem solid var(--clr-1);
+  position: relative;
+}
+
+.welcome-message::before,
+.welcome-message::after {
+  content: "";
+  display: block;
+  position: absolute;
+  background-color: #fff;
+}
+
+.welcome-message::before {
+  top: -0.3em;
+  bottom: -0.3em;
+  left: 1em;
+  right: 1em;
+}
+
+.welcome-message::after {
+  left: -0.3em;
+  right: -0.3em;
+  top: 1em;
+  bottom: 1em;
+}
+
+.welcome-message p {
+  position: relative;
+  z-index: 1;
 }
