--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,4 +1,7 @@
 #footer {
+    /* position: absolute;
+    bottom: 0; */
+    width: 100vw;
     height: 10rem;
     background: var(--clr-6);
     display: flex;
