--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 1rem;
+  
 }
+
+/* #root {
+  position: relative;
+  min-height: 100vh;
+} */
 
 
 
