--- a/src/components/EventUser/EventUser.css
+++ b/src/components/EventUser/EventUser.css
@@ -11,28 +11,46 @@
   
 .eventUser-main::before,
 .eventUser-main::after {
-content: "";
-display: block;
-position: absolute;
-background-color: #fff;
+    content: "";
+    display: block;
+    position: absolute;
+    background-color: #fff;
 }
 
 .eventUser-main::before {
-top: -0.3em;
-bottom: -0.3em;
-left: 1em;
-right: 1em;
+    top: -0.3em;
+    bottom: -0.3em;
+    left: 1em;
+    right: 1em;
 }
 
 .eventUser-main::after {
-left: -0.3em;
-right: -0.3em;
-top: 1em;
-bottom: 1em;
+    left: -0.3em;
+    right: -0.3em;
+    top: 1em;
+    bottom: 1em;
 }
 
 .eventUser-main>h4,
-.eventUser-main>p {
-position: relative;
-z-index: 1;
+.eventUser-main>p,
+.eventUser-main>button {
+    position: relative;
+    z-index: 1;
+}
+
+button {
+    display: block;
+    width: max-content;
+    padding: 0.8rem 2rem;
+    font-size: 1.1rem;
+    font-weight: bold;
+    margin-top: 1rem;
+    border-radius: 0.5rem;
+    box-shadow: none;
+    background-color: var(--clr-4);
+    color: #fff;
+	border: none;
+	font-family: inherit;
+	cursor: pointer;
+	outline: inherit;
 }
